--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="style.css">
       </head>
       <body>
-        <h1>プログラミング学習始めよう！</h1>
+        <h1>Git hub 勉強中！</h1>
       </body>
     </html>
